@@ -661,10 +661,9 @@ $rcmail_config['mail_pagesize'] = 50;
 $rcmail_config['addressbook_pagesize'] = 50;
 
 // use this timezone to display date/time
+// valid timezone identifers are listed here: php.net/manual/en/timezones.php
+// 'auto' will use the browser's timezone settings
 $rcmail_config['timezone'] = 'auto';
-
-// is daylight saving On? Default: (bool)date('I');
-$rcmail_config['dst_active'] = null;
 
 // prefer displaying HTML messages
 $rcmail_config['prefer_html'] = true;
